<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.hnuuhc</groupId>
    <artifactId>often-utils</artifactId>
    <version>1.2.21</version>
    <description>Java network common tools</description>
    <name>often-utils</name>

    <url>https://github.com/hnuuhc/often-utils</url>

    <properties>
        <encoding>UTF-8</encoding>
        <often.vendor>haicdust</often.vendor>
        <often.module>${project.groupId}.${project.artifactId}</often.module>
        <often.version>${project.version}</often.version>

        <!-- Java版本 -->
        <java.version>20</java.version>

        <!-- Maven插件版本 -->
        <maven.source.version>3.2.1</maven.source.version>
        <maven.javadoc.version>3.3.1</maven.javadoc.version>
        <maven.compiler.version>3.9.0</maven.compiler.version>
        <maven.resources.version>3.2.0</maven.resources.version>
        <maven.gpg.version>3.0.1</maven.gpg.version>
        <nexus.staging.version>1.6.13</nexus.staging.version>

        <!-- 文件编码 -->
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
    </properties>

    <licenses>
        <license>
            <name>GNU GENERAL PUBLIC LICENSE 3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
        </license>
    </licenses>
    <scm>
        <connection>https://github.com/hnuuhc/often-utils.git</connection>
        <url>https://github.com/hnuuhc/often-utils</url>
    </scm>
    <developers>
        <developer>
            <name>haicdust</name>
            <email>hnuuhc@hotmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>


    <profiles>
        <profile>
            <id>release</id>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
            <build>
                <plugins>
                    <!-- Gpg Signature -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven.gpg.version}</version>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>${nexus.staging.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://s01.oss.sonatype.org</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


    <dependencies>
        <!-- htmlunit -->
        <!--suppress VulnerableLibrariesLocal -->
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>htmlunit</artifactId>
            <version>2.70.0</version>
        </dependency>
        <!-- 压缩文件项目 -->
        <dependency>
            <groupId>net.lingala.zip4j</groupId>
            <artifactId>zip4j</artifactId>
            <version>2.11.4</version>
        </dependency>
        <!-- LevelDB 数据库 -->
        <dependency>
            <groupId>com.wavesplatform.leveldb-jna</groupId>
            <artifactId>leveldb-jna-core</artifactId>
            <version>1.23.1</version>
        </dependency>
        <dependency>
            <groupId>com.wavesplatform.leveldb-jna</groupId>
            <artifactId>leveldb-jna-native</artifactId>
            <version>1.23.1</version>
        </dependency>
        <!-- JDBC 数据库 -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.40.1.0</version>
        </dependency>
    </dependencies>


    <build>
        <!-- Maven插件 -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <!-- 跳过test编译 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>
                <!-- 编译代码：mvn compile -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${encoding}</encoding>
                    </configuration>
                </plugin>
                <!--打包资源：
					mvn resources:resources
					mvn resources:testResources
					mvn resources:copy-resources
				-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven.resources.version}</version>
                    <configuration>
                        <resources>
                            <!-- 配置文件 -->
                            <resource>
                                <directory>src/main/resources</directory>
                                <!-- 配置文件属性替换：properties -->
                                <filtering>false</filtering>
                                <includes>
                                    <include>**</include>
                                </includes>
                                <!-- 排除环境资源文件 -->
                                <excludes>
                                    <exclude>profiles/**</exclude>
                                </excludes>
                            </resource>
                            <!-- 开源协议 -->
                            <resource>
                                <directory>./</directory>
                                <filtering>false</filtering>
                                <targetPath>META-INF/</targetPath>
                                <includes>
                                    <include>LICENSE</include>
                                </includes>
                            </resource>
                        </resources>
                    </configuration>
                    <executions>
                        <!-- 自动复制环境资源 -->
                        <execution>
                            <id>auto-copy-resources</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>copy-resources</goal>
                            </goals>
                            <!-- 遗传 -->
                            <inherited>true</inherited>
                            <configuration>
                                <!-- 覆盖资源 -->
                                <overwrite>true</overwrite>
                                <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <!--
				打包源码：
					mvn source:jar
					mvn source:test-jar
				跳过源码：-D maven.source.skip=true
				-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.version}</version>
                    <configuration>
                        <attach>true</attach>
                    </configuration>
                    <executions>
                        <!-- 自动打包源码 -->
                        <execution>
                            <id>auto-build-source</id>
                            <phase>verify</phase>
                            <goals>
                                <!-- 和jar一样：不会分叉构建 -->
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!--
				打包文档：
					mvn site
					mvn javadoc:jar
					mvn javadoc:javadoc
				跳过文档：-D maven.javadoc.skip=true
				-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven.javadoc.version}</version>
                    <configuration>
                        <!-- 忽略警告：注解、标签等等 -->
                        <doclint>none</doclint>
                        <description>${project.description}</description>
                    </configuration>
                    <executions>
                        <!-- 自动打包文档 -->
                        <execution>
                            <id>auto-build-javadoc</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
